set up for search results index,
routes
model for view more in index
view logic for params

--- a/app/views/home/_product_fields.html.slim
+++ b/app/views/home/_product_fields.html.slim
@@ -1,4 +1,6 @@
 .single-product-container
+  - if params[:clown]
+    .quick-view-button value='#{product.shopify_id}' view more
   .img-container
     .product-image style="background-image: url('#{product.first_image_url}')"
     .product-image-two style="display: none; background-image: url('#{product.second_image_url}')"
