style for change load more text, auto scroll on and related shearch

--- a/app/assets/stylesheets/admin_section.sass
+++ b/app/assets/stylesheets/admin_section.sass
@@ -31,10 +31,10 @@
 
 .admin-gif-upload-info
   margin: 16px 22px
-  color: #212b36
+  color: #637381
 
 .number-of-items-to-load-text
-  color: #212b36
+  color: #637381
 
 .admin-submit-button-container
   height: 50px
@@ -165,3 +165,9 @@
     height: 34px
     &:before
       border-radius: 50%
+
+.load-more-text-box
+  input
+    border-radius: 5px
+    width: 220px
+    margin-top: 1rem
