added submit buttons

--- a/app/assets/stylesheets/admin_section.sass
+++ b/app/assets/stylesheets/admin_section.sass
@@ -43,8 +43,7 @@
 .admin-submit-button-hint
   font-size: 12px
   align-self: center
-  padding: 0.5rem
-  color: #212b36
+  color: #637381
 
 .js-admin-section-scroll-config-container
   height: 100%
@@ -171,3 +170,12 @@
     border-radius: 5px
     width: 220px
     margin-top: 1rem
+
+.synonym-container
+  padding: 1rem 0
+  width: 50%
+
+.js-new-syn-button
+  width: 230px
+  border-radius: 5px
+  background-color: #3f4eae
