--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -36,12 +36,15 @@
               img class="spinner-upload hidden" id="img_prev" style="background-image: url('#{ProductSetting.last.image.url}')"
               .admin-submit-button-container
                 .admin-submit-button-hint Click on the image to change it.
-                = f.submit 'Submit', class: 'button', style: 'width: 40%; height: 100%; text-align: center; background-color: #3f4eae'
+                / = f.submit 'Submit', class: 'button', style: 'width: 40%; height: 100%; text-align: center; background-color: #3f4eae'
         hr
         .scroll-data-inputs
           .number-of-items-to-load-container
             = f.input :number_of_items_to_load, as: :select,label: false ,collection: [16, 24, 32], selected: ProductSetting.last.number_of_items_to_load, :input_html => { :style => 'border-radius: 5px; width: 220px; margin: 0 1rem 0 0; color: #212b36' }
+            = f.submit 'Submit', class: 'button', style: 'width: 100px; border-radius: 5px; background-color: #3f4eae; margin: 0 1rem 0'
             .number-of-items-to-load-text Pick the number of items that will be loaded in.
+
+
 
           .toggle-switch style="margin-top: 1rem"
             label.switch
@@ -51,6 +54,8 @@
           div style="display: flex; align-items: center"
             = f.input :load_more_text, placeholder: 'Load More..', label: false, input_html: {value:ProductSetting.last.load_more_text, style: 'margin-top: 1rem; width: 220px; border-radius: 5px' }
             .toggle-switch-text Toggle autoscroll on or off
+          = f.submit 'Submit', class: 'button', style: 'width: 50%; border-radius: 5px; background-color: #3f4eae; display: block'
+
 
       .js-admin-section-filter-config-container.columns.medium-10 style="display: none"
         .header-box
@@ -88,6 +93,28 @@
               input class="boolean optional" type="checkbox" value="#{ProductSetting.last.related_search_on}" checked="checked" name="product_setting[related_search_on]" id="product_setting_related_search_on" onclick="$(this).val() == 'true' ? $(this).val(false) : $(this).val(true)"
               span.slider.round
             .toggle-switch-text Toggle related search
+
+
+
+          .synonym-container
+            = f.simple_fields_for :product_synonyms do |p|
+              .js-syn-container
+                - ProductSetting.last.product_synonyms.each do |ps|
+                  .row
+                    .columns.medium-6.small-6.large-6
+                      = p.input :synonym, label: false, placeholder: 'Synonym', required: false, input_html: {name: 'product_setting[product_synonyms][synonym][]', value: ps.synonym, style: 'border-radius: 5px'}
+                    .columns.medium-6.small-6.large-6
+                      = p.input :value, label: false, placeholder: 'Lookup Value', required: false, input_html: {name: 'product_setting[product_synonyms][value][]', value: ps.value, style: 'border-radius: 5px'}
+                      = p.input :id, as: :hidden, input_html: { value: ps.id, name: 'product_setting[product_synonyms][id][]' }
+                .js-new-syn
+                  .row
+                    .columns.medium-6.small-6.large-6
+                      = p.input :synonym, label: false, placeholder: 'Synonym', required: false, input_html: {name: 'product_setting[product_synonyms][synonym][]', style: 'border-radius: 5px'}
+                    .columns.medium-6.small-6.large-6
+                      = p.input :value, label: false, placeholder: 'Lookup Value', required: false, input_html: {name: 'product_setting[product_synonyms][value][]', style: 'border-radius: 5px'}
+          = link_to 'Add new synonym', 'javascript:void(0)', class: 'button js-new-syn-button', style: 'width: 230px'
+
+          = f.submit 'Submit', class: 'button', style: 'width: 50%; border-radius: 5px; background-color: #3f4eae; display: block'
 
 / .app-container
 /   button data-toggle="offCanvasLeftSplit1" class="change-loading-gif-btn" type="button"
