style for modal, and admin fixes

--- a/app/views/app_proxy/_search_results_index.html.slim
+++ b/app/views/app_proxy/_search_results_index.html.slim
@@ -1,13 +1,14 @@
-h1 byron is the best
+/ h1 byron is the best
+/
+/
+/ button#myBtn Open bitch
 
-
-button#myBtn Open bitch
-
-.the-modal
-  .modal-content
-    h1 hello from inside
-    .model-close &times;
-    p Some text in the Modal..
+/ .the-modal
+/   .modal-content
+/     .this-product-image
+/     h1 hello from inside
+/     .model-close &times;
+/     p Some text in the Modal..
 
 / #myModal.modal
 /   .modal-content
