--- a/app/assets/stylesheets/search.sass
+++ b/app/assets/stylesheets/search.sass
@@ -1,118 +1,118 @@
-.search-result-container
-  width: 100%
-  display: flex
-  height: 67px
-  align-items: center
-  padding: 0 0.5rem
-  &:hover
-    background-color: #000000
-    color: white
-
-.search-result-main-container
-  background-color: #f1f1f1
-
-// Test div for search
-.js-search-results
-  background: white
-  width: 100%
-  height: 35em
-  position: absolute
-  top: 40px
-  z-index: 4000
-  // overflow: scroll
-  display: none
-
-.search-result-image
-  background-size: cover
-  background-position: center
-  height: 50px
-  width: 50px
-  margin-right: 1rem
-
-.search-result-vendor, .search-result-title, .search-result-price
-  line-height: 16px
-  font-size: 14px
-
-.search-result-sub-container
-  display: flex
-  flex-direction: column
-  align-items: start
-
-
-.search-result-product-container
-  background-color: #F4F4F4
-  height: 35px
-  line-height: 35px
-  border-top: 1px solid black
-
-.search-result-product-text
-  float: left
-  margin-left: 1rem
-  font-weight: bold
-
-
-
-// a
-//   text-decoration: none
+// .search-result-container
+//   width: 100%
+//   display: flex
+//   height: 67px
+//   align-items: center
+//   padding: 0 0.5rem
 //   &:hover
-//     text-decoration: underline
-
-.main-search
-  width: 22em
-  height: 40px
-  padding: 0
-  margin: 0
-  line-height: 40px
-  position: relative
-  transition: all 0.25s linear
-  input
-    // width: 9.5em
-    height: 40px
-    line-height: 40px
-    padding: 0 0 0 0.5em
-    border: none
-    outline: none
-    background-color: transparent
-    font-size: 1em
-    float: left
-    transition: all 0.25s linear
-  a
-    width: 40px
-    height: 40px
-    line-height: 40px
-    padding: 0
-    color: #ccc
-    text-align: center
-    text-decoration: none
-    display: block
-    position: absolute
-    top: 0
-    right: 0
-    transition: all 0.25s linear
-  .main-search-button
-    // background-color: #8FD4F5
-    &:before
-      content: ""
-      font-family: FontAwesome
-      color: #FEFEFE
-      font-style: normal
-      font-size: 20px
-    &:hover
-      // color: #eee
-  &.collapsed
-    width: 2em
-    margin-left: 20em
-    input
-      width: 0
-      padding: 0
-      margin: 0
-    a
-      color: black
-      &:before
-        color: black
-        // background-color: #FEFEFE
-    &.main-search-button
-      color: white
-      background-color: #FEFEFE
-      &:hover
-        // color: #bbb
+//     background-color: #000000
+//     color: white
+//
+// .search-result-main-container
+//   background-color: #f1f1f1
+//
+// // Test div for search
+// .js-search-results
+//   background: white
+//   width: 100%
+//   height: 35em
+//   position: absolute
+//   top: 40px
+//   z-index: 4000
+//   // overflow: scroll
+//   display: none
+//
+// .search-result-image
+//   background-size: cover
+//   background-position: center
+//   height: 50px
+//   width: 50px
+//   margin-right: 1rem
+//
+// .search-result-vendor, .search-result-title, .search-result-price
+//   line-height: 16px
+//   font-size: 14px
+//
+// .search-result-sub-container
+//   display: flex
+//   flex-direction: column
+//   align-items: start
+//
+//
+// .search-result-product-container
+//   background-color: #F4F4F4
+//   height: 35px
+//   line-height: 35px
+//   border-top: 1px solid black
+//
+// .search-result-product-text
+//   float: left
+//   margin-left: 1rem
+//   font-weight: bold
+//
+//
+//
+// // a
+// //   text-decoration: none
+// //   &:hover
+// //     text-decoration: underline
+//
+// .main-search
+//   width: 22em
+//   height: 40px
+//   padding: 0
+//   margin: 0
+//   line-height: 40px
+//   position: relative
+//   transition: all 0.25s linear
+//   input
+//     // width: 9.5em
+//     height: 40px
+//     line-height: 40px
+//     padding: 0 0 0 0.5em
+//     border: none
+//     outline: none
+//     background-color: transparent
+//     font-size: 1em
+//     float: left
+//     transition: all 0.25s linear
+//   a
+//     width: 40px
+//     height: 40px
+//     line-height: 40px
+//     padding: 0
+//     color: #ccc
+//     text-align: center
+//     text-decoration: none
+//     display: block
+//     position: absolute
+//     top: 0
+//     right: 0
+//     transition: all 0.25s linear
+//   .main-search-button
+//     // background-color: #8FD4F5
+//     &:before
+//       content: ""
+//       font-family: FontAwesome
+//       color: #FEFEFE
+//       font-style: normal
+//       font-size: 20px
+//     &:hover
+//       // color: #eee
+//   &.collapsed
+//     width: 2em
+//     margin-left: 20em
+//     input
+//       width: 0
+//       padding: 0
+//       margin: 0
+//     a
+//       color: black
+//       &:before
+//         color: black
+//         // background-color: #FEFEFE
+//     &.main-search-button
+//       color: white
+//       background-color: #FEFEFE
+//       &:hover
+//         // color: #bbb
