--- a/app/views/home/_product_fields.html.slim
+++ b/app/views/home/_product_fields.html.slim
@@ -1,8 +1,40 @@
 .single-product-container
   - if params[:clown]
-    .quick-view-button value='#{product.shopify_id}' view more
+    .quick-view-button value='#{product.id}'view more
+
+    .the-modal style="padding: 1rem"
+      .row style="height: 100%; padding: 1rem; border: 1px solid black"
+        .the-modal-sub.medium-4.small-6.large-3 style="background-image: url('#{product.first_image_url}');background-position: center; height: 100%; width: 50%; background-size: cover"
+        .the-modal-sub-two.medium-8.small-6.large-9 style="background-color: yellow; padding: 1rem"
+          .model-close &times;
+          h3 = product.vendor
+          div style="display: flex"
+            h3 = "£ #{product.price} GPB"
+            - if product.compare_at_price != 0.0
+              h3 = "£ #{product.compare_at_price}"
+          h3 = product.title
+          select
+            - product.sizes.split(',').each do |size|
+              option = size
+
+
+    / .the-modal
+    /   .modal-content style="display: flex"
+    /     .this-product-image style="background-image: url('#{product.first_image_url}')"
+    /     .modal-content-sub
+    /       .model-close &times;
+    /       .this-product-title = product.vendor
+    /       .the-price-container
+    /         .the-price-field style="font-size: 3rem" = "£ #{product.price} GPB"
+    /         - if product.compare_at_price != 0.0
+    /           .the-compare-at-price style="font-size: 3rem" = "£ #{product.compare_at_price}"
+    /       .the-product-description style="font-size: 2rem" = product.title
+
+
+
+
   .img-container
-    .product-image style="background-image: url('#{product.first_image_url}')"
+    .product-image style="background-image: url('#{product.first_image_url}')" value='#{product.id}'
     .product-image-two style="display: none; background-image: url('#{product.second_image_url}')"
   .vendor-field = product.vendor
   .title-container
