--- a/app/views/app_proxy/index.html.slim
+++ b/app/views/app_proxy/index.html.slim
@@ -1,6 +1,5 @@
 - if params[:clown]
   = render 'search_results_index'
-
 - else
   .app-container
     #mySidenav.sidenav.hidden-on-large-screen
@@ -56,109 +55,48 @@
 
         - ProductSetting.last.filter_array.each do |filter|
           = render partial: filter, locals: {desktop: false}
-        / .filter-size-container
-        /   .heading-container
-        /     .filter-size-heading style='color: white' SIZE
-        /     .js-size-filter-icon.js-show-size-filter
-        /   .filter-size-collection.js-size-container
-        /     - @size_array.each do |size|
-        /       = link_to proxy_prod_path(size: size, brand: params[:brand], product_type: params[:product_type]) do
-        /         - if params[:size] == size
-        /           .black-box-container
-        /             .black-box-parent style='position: relative'
-        /               .black-box style='position: relative; top: 0; left: 0'
-        /               .small-black-box style='position: absolute; top: 0; left: 0'
-        /             .sub-heading style='color: white' = size
-        /             .tick-icon
-        /         - else
-        /           .black-box-container
-        /             .black-box
-        /             .sub-heading  style='color: white' = size
 
-        / .filter-type-container
-        /   .heading-container
-        /     .filter-type-heading style='color: white' TYPE
-        /     .js-type-filter-icon.js-show-type-filter
-        /   .filter-type-collection.js-type-container
-        /     - @product_type.each do |pt|
-        /       = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: pt) do
-        /         - if params[:product_type] == pt
-        /           .black-box-container
-        /             .black-box-parent style='position: relative'
-        /               .black-box style='position: relative; top: 0; left: 0'
-        /               .small-black-box style='position: absolute; top: 0; left: 0'
-        /             .sub-heading style='color: white' = pt
-        /             .tick-icon
-        /         - else
-        /           .black-box-container
-        /             .black-box
-        /             .sub-heading style='color: white' = pt
+    #myLeftSidenav.sidenav.hidden-on-large-screen
+      div style='padding: 0 20px'
+        .close-filter-container style='margin: 2rem 0 0 0'
+          .close-filter-text SORT
+          a.close-sort-btn.hidden-on-large-screen style="font-size: 20px" href="javascript:void(0)" &times;
+        .sort-nav-container
+          .black-box
+          a href="#{proxy_prod_url}" Sort
+        .sort-nav-container
+          .black-box
+          a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'title_ascending')}" Alphabetically, A-Z
+        .sort-nav-container
+          .black-box
+          a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'title_descending')}" Alphabetically, Z-A
+        .sort-nav-container
+          .black-box
+          a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'price_ascending')}" Price, low to high
+        .sort-nav-container
+          .black-box
+          a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'price_descending')}" Price, high to low
+        .sort-nav-container
+          .black-box
+          a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'created_descending')}" Date, new to old
+        .sort-nav-container
+          .black-box
+          a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'created_ascending')}" Date, old to new
 
-          / .filter-price-container
-          /   .heading-container
-          /     .filter-price-heading style="color: white" PRICE
-          /     .js-price-filter-icon.js-show-price-filter
-          /   .filter-price-collection.js-price-container
-          /     - @price_ranges.each do |pr|
-          /       = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: pr) do
-          /         - if params[:product_type] == pr
-          /           .black-box-container
-          /             .black-box-parent style='position: relative'
-          /               .black-box style='position: relative; top: 0; left: 0'
-          /               .small-black-box style='position: absolute; top: 0; left: 0'
-          /             .sub-heading style="color: white" = "£ #{pr}"
-          /             .tick-icon
-          /         - else
-          /           .black-box-container
-          /             .black-box
-          /             .sub-heading style="color: white" = "£ #{pr}"
+    .openbtn-container.hidden-on-large-screen
+      .openbtn-sub-container.hidden-on-large-screen.openbtn
+        span.hidden-on-large-screen style="font-size:30px; cursor:pointer" FILTER
 
-          p
-            label style="color: white; margin: 1rem 0; font-weight: bold" for="amount"  Price range:
-            input#amount readonly="" style="border:0; color: #fe89b5; font-weight:bold; background-color: #111111; box-shadow: none; padding-left: 0rem" type="text"
-          #slider-range
+      .openbtn-sub-container.hidden-on-large-screen.open-sort-btn
+        span.hidden-on-large-screen style="font-size:30px; cursor:pointer" SORT
 
-      #myLeftSidenav.sidenav.hidden-on-large-screen
-        div style='padding: 0 20px'
-          .close-filter-container style='margin: 2rem 0 0 0'
-            .close-filter-text SORT
-            a.close-sort-btn.hidden-on-large-screen style="font-size: 20px" href="javascript:void(0)" &times;
-          .sort-nav-container
-            .black-box
-            a href="#{proxy_prod_url}" Sort
-          .sort-nav-container
-            .black-box
-            a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'title_ascending')}" Alphabetically, A-Z
-          .sort-nav-container
-            .black-box
-            a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'title_descending')}" Alphabetically, Z-A
-          .sort-nav-container
-            .black-box
-            a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'price_ascending')}" Price, low to high
-          .sort-nav-container
-            .black-box
-            a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'price_descending')}" Price, high to low
-          .sort-nav-container
-            .black-box
-            a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'created_descending')}" Date, new to old
-          .sort-nav-container
-            .black-box
-            a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'created_ascending')}" Date, old to new
+    .product-searched-heading.hidden-on-small-screen WHAT WAS SEARCHED
+    .products-found-count.hidden-on-small-screen ITEMS FOUND
 
-      .openbtn-container.hidden-on-large-screen
-        .openbtn-sub-container.hidden-on-large-screen.openbtn
-          span.hidden-on-large-screen style="font-size:30px; cursor:pointer" FILTER
-
-        .openbtn-sub-container.hidden-on-large-screen.open-sort-btn
-          span.hidden-on-large-screen style="font-size:30px; cursor:pointer" SORT
-
-      .product-searched-heading.hidden-on-small-screen WHAT WAS SEARCHED
-      .products-found-count.hidden-on-small-screen ITEMS FOUND
-
-      .filter-container.hidden-on-small-screen
-        .filter-heading-container
-          .filter-heading FILTER
-          .js-main-filter-icon.js-show-main-filter
+    .filter-container.hidden-on-small-screen
+      .filter-heading-container
+        .filter-heading FILTER
+        .js-main-filter-icon.js-show-main-filter
 
       .dropdown
         button.dropbtn
@@ -170,6 +108,62 @@
           a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'price_descending')}"  Price, high to low
           a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'created_descending')}"  Date, new to old
           a href="#{proxy_prod_url(brand: params[:brand], size: params[:size], product_type: params[:product_type], sort_by: 'created_ascending')}"  Date, old to new
+
+
+    .clearfix.main-container
+      .box-1 
+        .filter-data-options-container.js-main-container.hidden-on-small-screen
+          - if params[:brand].present?
+            - params[:brand].each do |brand|
+              - newbrand = params[:brand].dup
+              - newbrand.delete(brand)
+              = link_to proxy_prod_path(size: params[:size], product_type: params[:product_type], price: params[:price], brand: newbrand) do
+                .black-box-container
+                  .black-box-parent style='position: relative'
+                    .black-box style='position: relative; top: 0; left: 0'
+                    .small-black-box style='position: absolute; top: 0; left: 0'
+                  .sub-heading = brand
+                  .remove-filter
+      
+          - if params[:size].present?
+            - params[:size].each do |size|
+              - newSize = params[:size].dup
+              - newSize.delete(size)
+              = link_to proxy_prod_path(brand: params[:brand], product_type: params[:product_type], price: params[:price], size: newSize) do
+                .black-box-container
+                  .black-box-parent style='position: relative'
+                    .black-box style='position: relative; top: 0; left: 0'
+                    .small-black-box style='position: absolute; top: 0; left: 0'
+                  .sub-heading = "Size #{size}"
+                  .remove-filter
+      
+            - if params[:price].present?
+              = link_to proxy_prod_path(brand: params[:brand], product_type: params[:product_type], size: params[:size]) do
+                .black-box-container
+                  .black-box-parent style='position: relative'
+                    .black-box style='position: relative; top: 0; left: 0'
+                    .small-black-box style='position: absolute; top: 0; left: 0'
+                  .sub-heading = params[:price]
+                  .remove-filter
+      
+          - if params[:product_type].present?
+            - params[:product_type].each do |pt|
+              - newpt = params[:product_type].dup
+              - newpt.delete(pt)
+              = link_to proxy_prod_path(brand: params[:brand], size: params[:size], price: params[:price], product_type: newpt) do
+                .black-box-container
+                  .black-box-parent style='position: relative'
+                    .black-box style='position: relative; top: 0; left: 0'
+                    .small-black-box style='position: absolute; top: 0; left: 0'
+                  .sub-heading = pt
+                  .remove-filter
+      
+          - ProductSetting.last.filter_array.each do |filter|
+            = render partial: filter, locals: {desktop: true}
+      .box-2
+        .product-container
+          .js-all-products
+            = render partial: 'home/products', locals: {showFirst: true}
 
     .main-container
       .filter-data-options-container.js-main-container.hidden-on-small-screen
@@ -184,7 +178,7 @@
                   .small-black-box style='position: absolute; top: 0; left: 0'
                 .sub-heading = brand
                 .remove-filter
-
+    
         - if params[:size].present?
           - params[:size].each do |size|
             - newSize = params[:size].dup
@@ -196,7 +190,7 @@
                   .small-black-box style='position: absolute; top: 0; left: 0'
                 .sub-heading = "Size #{size}"
                 .remove-filter
-
+    
           - if params[:price].present?
             = link_to proxy_prod_path(brand: params[:brand], product_type: params[:product_type], size: params[:size]) do
               .black-box-container
@@ -218,13 +212,6 @@
                 .sub-heading = pt
                 .remove-filter
 
-        - ProductSetting.last.filter_array.each do |filter|
-          = render partial: filter, locals: {desktop: true}
-
-      .product-container
-        .js-all-products
-          = render partial: 'home/products', locals: {showFirst: true}
-
       - if ProductSetting.last.autoscroll_on
         .gif-container
           .loading-gif.js-loading-gif style="background-image: url('http://localhost:3000#{ProductSetting.last.image.url}')"
@@ -233,5 +220,5 @@
           = link_to ProductSetting.last.load_more_text, 'javascript:void(0)', class: 'js-load-more button', style: 'text-align: center;width: 397px;height: 56px;font-size: 20px;'
 
 javascript:
-  Window.paramUrl = "#{request.url.split("?")[1]}"
+  Window.paramUrl = "&#{request.url.split('?')[1].split('shop')[0]}"
   Window.noOfProducts = "#{ProductSetting.last.number_of_items_to_load}"
