modal blur, style, image side increase, wider view

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -1,5 +1,5 @@
 .app-container
-  padding: 0 3rem
+  padding: 0 1rem 0 4rem
   transition: margin-left .5s
   margin: 0 1rem
 
@@ -15,26 +15,29 @@
 .price-field
   color: #fe89b5
   font-weight: bold
+  font-size: 14px
   margin-right: 1rem
 
 .vendor-field
   margin: 10px 0
   font-weight: bold
+  font-size: 14px
 
 .title-field
   margin: 0 0 8px
+  font-size: 14px
 
 .img-container
   display: flex
   align-items: center
   justify-content: center
   background-color: #F8F8F8
-  height: 250px
+  height: 400px
   .product-image, .product-image-two
     background-size: cover
     background-position: center
-    height: 248px
-    width: 248px
+    height: 100%
+    width: 100%
 
 .price-container
   display: flex
@@ -43,7 +46,7 @@
   min-height: 32px
 
 .compare-at-price
-  font-size: 11px
+  font-size: 14px
   color: #7A7A7A
   text-decoration: line-through
 
