--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -85,3 +85,10 @@ body
     color: white
   .small-black-box
     margin-right: 0.5rem
+  .row-style
+    height: 60% !important
+  .the-modal
+    // background-color: red !important
+    height: 100vh !important
+  .the-modal-sub-two
+    margin-top: 2rem  !important
