--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -43,17 +43,17 @@
   background-size: cover
 
 .filter-data-options-container
-  width: 12rem
+  width: 100%
   float: left
   margin: 0 1rem 0 0
 
 .box-1
   float: left
-  width: 20%
+  width: 15%
 
 .box-2
   float: left
-  width: 80%
+  width: 85%
 
 .clearfix::after
   content: ""
@@ -65,11 +65,11 @@
   padding-bottom: 1rem
 
 .filter-size-container
-  border-bottom: 1px solid black
+  border-bottom: 1px solid #ccc
   padding-bottom: 1rem
 
 .filter-type-container
-  border-bottom: 1px solid black
+  border-bottom: 1px solid #ccc
   padding-bottom: 1rem
 
 .heading-container
@@ -130,3 +130,12 @@
 #shopify-section-cust-footer
 .penbtn-container
 .main-container
+
+.price-range-container
+  border-bottom: 1px solid #ccc
+
+.price-range-submit
+  border-radius: 5px
+  margin-top: 1rem
+  width: 100%
+  &:hover
