--- a/app/assets/stylesheets/search_results_index.sass
+++ b/app/assets/stylesheets/search_results_index.sass
@@ -12,7 +12,7 @@
 
 .the-modal
   display: none
-  background-color: red
+  background-color: #ffffff
   width: 100%
   height: 522px
   position: fixed
@@ -20,6 +20,7 @@
   left: 0
   top: 0
   overflow: auto
+  padding: 1rem
 
 
 .modal
@@ -51,3 +52,23 @@
     color: #000
     text-decoration: none
     cursor: pointer
+
+.the-modal-sub
+  background-position: center
+  height: 100%
+  width: 50%
+  background-size: cover
+
+.the-modal-sub-two
+  border: 1px solid black
+  border-radius: 5px
+  padding: 1rem
+
+.fade-blur
+  filter: blur(35px)
+
+.row-style
+  height: 100%
+  padding: 1rem
+  border: 1px solid black
+  border-radius: 5px
