--- a/app/views/app_proxy/_price.html.slim
+++ b/app/views/app_proxy/_price.html.slim
@@ -1,14 +1,20 @@
 - if desktop
-  p
-    label for="amount-two" style=" font-weight: bold; margin: 1rem 0" Price range:
-    input#amount-two readonly="" style="border:0; color: #fe89b5; font-weight:bold; box-shadow: none; background-color: #fefefe; padding-left: 0rem" type="text"
-  #slider-range-two
-  div style="width: 100%;text-align: right;margin-top: 8px;"
-    = link_to 'Filter Price', 'javascript:void(0)', class: 'button js-filter-price', style: 'background: black'
+  .price-range-container
+    p
+      div style="display: flex; justify-content: space-between; align-items: conter; margin-bottom: 1rem"
+        span for="amount-two" style=" font-weight: bold; font-size: 14px" PRICE RANGE:
+        .js-price-filter-icon
+      input#amount-two readonly="" style="border:0; color: #fe89b5; font-weight:bold; box-shadow: none; background-color: #fefefe; padding-left: 0rem" type="text"
+    #slider-range-two
+    .price-range-submit
+      = link_to 'Filter Price', 'javascript:void(0)', class: 'button js-filter-price', style: 'background: black; width: 100%'
 - else
-  p
-    label style="color: white; margin: 1rem 0; font-weight: bold" for="amount"  Price range:
-    input#amount readonly="" style="border:0; color: #fe89b5; font-weight:bold; background-color: #111111; box-shadow: none; padding-left: 0rem" type="text"
-  #slider-range
-  div style="width: 100%;margin-top: 8px;"
-    = link_to 'Filter Price', 'javascript:void(0)', class: 'button js-filter-price', style: 'background: white'
+  .price-range-container
+    p
+      div style="display: flex; justify-content: space-between; align-items: conter; margin-bottom: 1rem"
+        span style="color: white; font-weight: bold; font-size: 14px" for="amount"  PRICE RANGE:
+        .js-price-filter-icon
+      input#amount readonly="" style="border:0; color: #fe89b5; font-weight:bold; background-color: #111111; box-shadow: none; padding-left: 0rem" type="text"
+    #slider-range
+    .price-range-submit
+      = link_to 'Filter Price', 'javascript:void(0)', class: 'button js-filter-price', style: 'background: white; width: 100%'
