fix: added modal update

--- a/app/assets/stylesheets/search_results_index.sass
+++ b/app/assets/stylesheets/search_results_index.sass
@@ -60,7 +60,7 @@
   background-size: cover
 
 .the-modal-sub-two
-  border: 1px solid black
+  border: 1px solid #CCC
   border-radius: 5px
   padding: 1rem
 
@@ -70,5 +70,5 @@
 .row-style
   height: 100%
   padding: 1rem
-  border: 1px solid black
+  border: 1px solid #CCC
   border-radius: 5px
