fixed filter margin style and price filter container style

--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -63,19 +63,22 @@
 .filter-brand-container, .filter-price-container
   border-bottom: 1px solid #ccc
   padding-bottom: 1rem
+  margin-bottom: 2rem
 
 .filter-size-container
   border-bottom: 1px solid #ccc
   padding-bottom: 1rem
+  margin-bottom: 2rem
 
-.filter-type-container
+.filter-type-container, .price-range-container
   border-bottom: 1px solid #ccc
   padding-bottom: 1rem
+  margin-bottom: 2rem
 
 .heading-container
   display: flex
   justify-content: space-between
-  margin: 2rem 0
+  margin-bottom: 2rem
   line-height: 11px
 
 .close-filter-text
@@ -130,9 +133,6 @@
 #shopify-section-cust-footer
 .penbtn-container
 .main-container
-
-.price-range-container
-  border-bottom: 1px solid #ccc
 
 .price-range-submit
   border-radius: 5px
