--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -53,6 +53,9 @@ body
   align-items: center
   min-width: 160px
 
+.div-style
+  padding: 0 1rem
+
 @media screen and (max-height: 450px)
   .sidenav
     padding-top: 15px
@@ -92,3 +95,9 @@ body
     height: 100vh !important
   .the-modal-sub-two
     margin-top: 2rem  !important
+  .box-2
+    width: 100%
+  .app-container
+    padding: 0
+  .div-style
+      padding: 0 !important
