--- a/app/views/app_proxy/_brand.html.slim
+++ b/app/views/app_proxy/_brand.html.slim
@@ -1,6 +1,6 @@
 - if desktop
   .filter-brand-container.hidden-on-small-screen
-    .heading-container style="margin-top: 0rem"
+    .heading-container
       .filter-brand-heading BRAND
       .js-brand-filter-icon.js-show-brand-filter
     .filter-brand-collection.js-brand-container
