view more in search result button fix

--- a/app/views/home/_product_fields.html.slim
+++ b/app/views/home/_product_fields.html.slim
@@ -1,7 +1,7 @@
 .single-product-container
   - if params[:clown]
-
-    .quick-view-button value='#{product.id}'view more
+    .quick-view-button-container style="width: 100%; display: flex; justify-content: center"
+      .quick-view-button value='#{product.id}'view more
 
     .the-modal
       .row.row-style
