--- a/app/assets/stylesheets/search_results_index.sass
+++ b/app/assets/stylesheets/search_results_index.sass
@@ -1,10 +1,10 @@
 .quick-view-button
-  background-color: green
-  width: 100%
+  background-color: black
+  width: 80%
   height: 40px
+  color: white
   position: absolute
   top: 105px
-  left: 0
   border-radius: 5px
   display: flex
   align-items: center
