change color of load more link

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -66,6 +66,11 @@
   width: 120px
   display: none
 
+.search-loading-gif-container
+  width: 100%
+  display: flex
+  justify-content: center
+
 .search-loading-gif
   background-image: image-url('Eclipse.gif')
   background-position: center
