--- a/app/views/home/_product_fields.html.slim
+++ b/app/views/home/_product_fields.html.slim
@@ -1,5 +1,5 @@
 .single-product-container
-  - if params[:clown]
+  - if params[:query]
     .quick-view-button-container style="width: 100%; display: flex; justify-content: center"
       .quick-view-button value='#{product.id}'view more
 
