--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -104,6 +104,21 @@
             .toggle-switch-text Toggle related search
             = f.input :related_search_on, as: :hidden, input_html: { value: "#{ProductSetting.last.related_search_on ? '1' : '0'}" }
 
+
+
+
+          .toggle-switch style="margin-top: 1rem"
+            label.switch
+              - if ProductSetting.last.overflow_scroll_on
+                input class="boolean optional" type="checkbox" checked="checked" onclick="$('#product_setting_overflow_scroll_on').val() == '1' ? $('#product_setting_overflow_scroll_on').val('0') : $('#product_setting_overflow_scroll_on').val('1')"
+              - else
+                input class="boolean optional" type="checkbox" onclick="$('#product_setting_overflow_scroll_on').val() == '1' ? $('#product_setting_overflow_scroll_on').val('0') : $('#product_setting_overflow_scroll_on').val('1')"
+              span.slider.round
+            .toggle-switch-text Toggle overflow scroll on products searched
+            = f.input :overflow_scroll_on, as: :hidden, input_html: { value: "#{ProductSetting.last.overflow_scroll_on ? '1' : '0'}" }
+
+
+
           .synonym-container
             = f.simple_fields_for :product_synonyms do |p|
               .js-syn-container
